first_pod.yml
apiVersion : v1
kind: Pod
metadata:
   name: "mypod1"
spec:
   containers:
    - name : "myc1"
      image : "httpd"
