pod_label.yml
apiVersion: v1
kind: Pod
metadata:
  name: labelpod
  namespace: teama
  labels:
    DC: IN
    team: teamA
    region: south
spec:
  containers:
    - name: "lbos"
      image: "httpd"
