pod_label1.yml
apiVersion: v1
kind: Pod
metadata:
  name: "mypod3"
  labels:
     dc: US
     team: team3

spec:
  containers:
  - name: "myc3"
    image: "httpd"
