seccontext.yml
apiVersion: v1
kind: Pod
metadata:
  name: securitypod
spec:
  containers:
    - name: secos
      image: vimal13/apache-webserver-php
      securityContext:
        runAsUser: 0
        capabilities:
          drop: ["NET_RAW"]
