firewall.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mywebsec
spec:
  podSelector:
    matchLabels:
      app: myd
  policyTypes:
    - Ingress

  ingress:
    - ports:
      - port: 80
        protocol: TCP
